--- a/cashier/lib/cashier_web/live/cashier_controller.html.heex
+++ b/cashier/lib/cashier_web/live/cashier_controller.html.heex
@@ -1,4 +1,4 @@
-<body>
+<body class="bg-gray-100 p-8 m-4">
   <div class="flex gap-4">
     <div class="flex-[2]">
       <div class="overflow-x-auto">
@@ -68,8 +68,11 @@
                   <h3 class="text-gray-800">{item.name}</h3>
                   <p class="text-sm text-gray-500">Quantity: {item.units}</p>
                 </div>
-                <div class="text-right">
+                <div class="flex-1 text-center">
                   <p class="font-bold text-gray-900">£{Decimal.round(item.price, 2)}</p>
+                </div>
+                <div class="text-right">
+                  <p class="font-bold text-gray-900">£{Decimal.round(item.price, 2) |> Decimal.mult(item.units)}</p>
                 </div>
               </div>
             </div>
@@ -86,7 +89,6 @@
             </div>
           </div>
           
-<!-- Button at the end -->
           <button
             class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg shadow-md transition-colors duration-200 mt-2"
             phx-click="restart"
@@ -97,4 +99,9 @@
       </div>
     </div>
   </div>
+<div>
+          <%= for item <- @final_cart.items do %>
+  <.card item={item}> </.card>
+          <% end %>
+</div>
 </body>
