--- a/cashier/lib/cashier_web/live/cashier_controller.html.heex
+++ b/cashier/lib/cashier_web/live/cashier_controller.html.heex
@@ -62,20 +62,7 @@
       <div class="max-w-md mx-auto">
         <div class="flex flex-col">
           <%= for item <- @final_cart.items do %>
-            <div class="bg-white p-4 shadow-sm border border-gray-200">
-              <div class="flex justify-between items-center">
-                <div class="flex-1">
-                  <h3 class="text-gray-800">{item.name}</h3>
-                  <p class="text-sm text-gray-500">Quantity: {item.units}</p>
-                </div>
-                <div class="flex-1 text-center">
-                  <p class="font-bold text-gray-900">£{Decimal.round(item.price, 2)}</p>
-                </div>
-                <div class="text-right">
-                  <p class="font-bold text-gray-900">£{Decimal.round(item.price, 2) |> Decimal.mult(item.units)}</p>
-                </div>
-              </div>
-            </div>
+            <.cart_item item={item} />
           <% end %>
 
           <div class="bg-white p-4 rounded-lg shadow-sm border border-gray-200">
@@ -88,7 +75,7 @@
               </div>
             </div>
           </div>
-          
+
           <button
             class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg shadow-md transition-colors duration-200 mt-2"
             phx-click="restart"
@@ -99,9 +86,5 @@
       </div>
     </div>
   </div>
-<div>
-          <%= for item <- @final_cart.items do %>
-  <.card item={item}> </.card>
-          <% end %>
-</div>
+  <div></div>
 </body>
